--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- TELA 1: Boas-vindas -->
     <div id="welcomeScreen">
       <div class="mb-10 text-center">
-        <img src="logo1.png" alt="Logo Freiberger Dantas" width="270" height="180" class="mx-auto mb-4" />
+        <img src="./assets/logo1.png" alt="Logo Freiberger Dantas" width="270" height="180" class="mx-auto mb-4" />
       </div>
 
       <div class="message-container">
@@ -34,7 +34,7 @@
     <!-- TELA 2: Situação Jurídica -->
     <div id="situacaoScreen" class="hidden">
       <div class="mb-10 text-center">
-        <img src="logo1.png" alt="Logo Freiberger Dantas" width="270" height="180" class="mx-auto mb-4" />
+        <img src="./assets/logo1.png" alt="Logo Freiberger Dantas" width="270" height="180" class="mx-auto mb-4" />
       </div>
 
       <div class="message-container">
@@ -56,7 +56,7 @@
             <option value="Pensão por Morte">Pensão por Morte</option>
         </optgroup>
 
-        <optgroup label="OUTROS SERVIÇOS">
+        <optgroup label="Cível/Outros">
             <option value="Outros">Outros</option>
         </optgroup>
         </select>
@@ -74,7 +74,7 @@
     <!-- TELA 3: Contato -->
     <div id="contatoScreen" class="hidden">
       <div class="mb-10 text-center">
-        <img src="logo1.png" alt="Logo Freiberger Dantas" width="270" height="180" class="mx-auto mb-4" />
+        <img src="./assets/logo1.png" alt="Logo Freiberger Dantas" width="270" height="180" class="mx-auto mb-4" />
       </div>
 
       <div class="message-container">
@@ -91,7 +91,7 @@
     <!-- TELA 4: Agradecimento -->
     <div id="thankYouScreen" class="hidden text-center">
       <div class="mb-10">
-        <img src="logo1.png" alt="Logo Freiberger Dantas" width="270" height="180" class="mx-auto mb-4" />
+        <img src="./assets/logo1.png" alt="Logo Freiberger Dantas" width="270" height="180" class="mx-auto mb-4" />
       </div>
 
       <div class="message-container">
